# git_meson

./: GIT-VERSION-FILE.in  meson.build  meson_options.txt
po/: meson.build
